--- a/views/hotelInfo.ejs
+++ b/views/hotelInfo.ejs
@@ -1,31 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AboutPage</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/style/hotelInfo.css">
 </head>
+
 <body>
-   <div class="hotelinfo-nav">
-    <div class="info-left">hello</div>
-    <div class="info-right">
-        <a href="#">share</a>
-        <a href="#">save</a>
+    <div class="">
+        <% hotelId.forEach(x=>{%>
+
+            <% if(x._id==id){%>
+                <div class="hotelinfo-nav row row-cols-2 ">
+                    <div class="info-left col">hello</div>
+                    <div class="info-right col">
+                        <a href="#">share</a>
+                        <a href="#">save</a>
+                    </div>
+                </div>
+                <div class="gridStyle ">
+                    <div class="first-img">
+                        <img src="/img/amazingView/<%= x.hotelImg[3].filename %>">
+                    </div>
+                    <div class="second-img">
+                        <div class="gridformat">
+                            <img src="/img/amazingView/<%= x.hotelImg[3].filename %>">
+                        </div>
+                        <div class="gridformat">
+                            <img src="/img/amazingView/<%=x.hotelImg[0].filename %>">
+                        </div>
+                        <div class="gridformat ">
+                            <img src="/img/amazingView/<%=x.hotelImg[2].filename %>">
+                        </div>
+                        <div class="gridformat">
+                            <img src="/img/amazingView/<%=x.hotelImg[1].filename %>">
+                        </div>
+                    </div>
+                </div>
+                <div class="details">
+                    <div class="details-hotel">
+                        <h2> Unique Retreat -<%= x.nameOfhouse %> </h2>
+                        <h4>Entire guest suite in Minden ,<%= x.country %></h4>
+                        <p>12 guests3. bedrooms . 4beds  . 1.5bathrooms</p>
+                        <h3>New</h3>
+                        <div class="host-detail" style="display: flex;">
+                            <div class="left-host">
+                                <img src="#">
+                            </div>
+                            <div class="right-host" >
+                                <h3>Hosted by  <%= x.hostName %></h3>
+                                <p style="color: gray; opacity: 0.8;">SuperHost . 6 years hosting</p>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <h3>Self check-in</h3>
+                            <p style="opacity: 0.9;">Check yourself in with the smartlock</p>
+                            <h3>Free cancellation before 28 January</h3>
+                        </div>
+                        <div class="content-text" style="border-bottom: solid 1px grey;">
+                            <p>Whether you are looking for a peaceful pied-à-terre for a professional stay or for a tourist stay in the Montpellier region, our apartment is for you. Place in a quiet residence, at the gates of Montpellier, it has all the commodities. You will be 1 min walk from the tram, 20 min from the train station and the comedy square, close to the A75, all shops. In addition, it is perfectly equipped.</p>
+                        </div>
+                        <div class="place-offer">
+                            <p>Kitchen</p>
+                            <p>Wifi</p>
+                            <p>Car parking on premises</p>
+                            <p>Pool</p>
+                            <p>Tv</p>
+                            <button>Show all more amenities</button>
+                        </div>
+                    </div>
+                    <div class="price-detail">
+                        <div class="price">
+                           <p>Rupees per night <%= x.price %> </p>
+
+                        </div>
+                    </div>
+                </div>
+                    <%}%>
+
+
+
+                        <%})%>
     </div>
-   </div>
-   <% hotelId.forEach(x=>{%>
-    
-    <% if(x._id==id){%>
-       <div class="gridStyle">
-        <div class="gridformat"></div>
-        <div class="gridformat"></div>
-        <div class="gridformat"></div>
-        <div class="gridformat"></div>
-       </div>
-    <%}%>
-       
-    
-          
-   <%})%>
 </body>
+
 </html>
