--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,7 +24,7 @@
       <div class="hotels">
          
          <% data.forEach(x=>{%>
-            <a href="/hotelInfo/<%=x._id %>">
+            <a href="/hotelInfo/<%=x._id %>" style="text-decoration: none; color: black;">
          <div class="div-img">
             
             
@@ -33,8 +33,12 @@
             
             
             <div class="details-hotel">
-               <%= x.price %>
-               <%= x.hostName %>
+               
+               <h2><%= x.city %></h2>
+               <p>Mountain and garden views</p>
+               
+               <br>
+               <%= x.price %> night
             </div>
          </div>
             </a>
@@ -43,6 +47,10 @@
      </div>
     
     </div>
+    <footer>
+      <%- include('partials/footer'); -%>
+    </footer>
+
     <script src="/js/index.js"></script>
 </body>
 </html>
