--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -49,7 +49,9 @@
 
     <modal id="modal" style="display: none;">
          <div>
-            
+            <% if(user){%>
+                <% console.log(user.firstName)%>
+            <%}%>
             
             <div>
                 <a href="register">Register</a>
