--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style/register.css" type="text/css">
 </head>
 <body>
-    <form method="POSt" action="/login">
-        <label for="Email">Email</label>
-        <input type="email" name="email" placeholder="Email">
-        <br>
-        <br>
-        <label for="Password"> Password</label>
-        <input type="password" name="password" placeholder="password">
-        <br>
-        <br>
-        <input type="submit" value="LogIn">
-    </form>
+    <div class="register-container">
+     
+        
+        <form method="POSt" action="/login">
+            <label for="Email">Email</label>
+            <input type="email" name="email" placeholder="Email">
+            <br>
+            <br>
+            <label for="Password"> Password</label>
+            <input type="password" name="password" placeholder="password">
+            <br>
+            <br>
+            <input type="submit" value="LogIn">
+        </form>
+    </div>
 </body>
 </html>
