--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,42 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style/home.css" type="text/css">
 </head>
 <body>
-    <div class="footer" style="margin-bottom: 0; margin-top: 30px;">
-        <h2>Inspiration For Future getaways</h2>
-        <div class="footer-info" style="display: flex; flex-direction: column; list-style: none; justify-content: space-around;">
-            <ul style="display: flex; list-style: none; justify-content: space-around;">
-                <li>Popular</li>
-                <li>Arts & Culture</li>
-                <li>Outdoors</li>
-                <li>Mountains</li>
-                <li>Beach</li>
-                <li>Unique Stays</li>
-            </ul>
-        </div>
-        <div class="footer-details">
-            <div class="left-details">
-                <h3>Canmore</h3>
-                <p>Apartment rentals</p>
-                <br>
-                <h3>Marbella</h3>
-                <p>Vill rentals</p>
-                <br>
-                <h3>Tucson</h3>
-                <p>Rentals with pools</p>
+    <div class="footer" style="margin-bottom: 0; padding: 30px; border-top: 1px grey solid;">
+         <div class="upper-footer">
+            <div class="left-footer">
+                <h3>Support</h3>
+                <li>Help Center</li>
+                <li>AirCover</li>
+                <li>Anti-discrimination</li>
+                <li>Cancellation options</li>
+                <li> Report neighbourhood concern</li>
             </div>
-            <div class="right-details">
-                <h3>Canmore</h3>
-                <p>Apartment rentals</p>
-                <br>
-                <h3>Marbella</h3>
-                <p>Vill rentals</p>
-                <br>
-                <h3>Tucson</h3>
-                <p>Rentals with pools</p>
+            <div class="left-footer">
+                <h3>Hostin</h3>
+                <li>Airbnb your home</li>
+                <li>AirCover for Hotels</li>
+                <li>Hosting resourse</li>
+                <li>Community forum</li>
+                <li>Hosting responsibly</li>
             </div>
-        </div>
+            <div class="left-footer">
+                <h3>Airbnb</h3>
+                <li>Newsroom</li>
+                <li>New features</li>
+                <li>Careers</li>
+                <li>Investors</li>
+                <li>Airbnb.org emergency stays</li>
+            </div>
+         </div>
         <div class="footer-below" style="text-align: center;">
             @copyrights
             
