--- a/public/style/hotelInfo.css
+++ b/public/style/hotelInfo.css
@@ -30,20 +30,33 @@
     grid-template-columns: auto auto;
 
 }
+/* style details of hotel............................here */
+.details{
+    padding-left: 20px;
+    padding-top: 30px;
+}
+/* PlAcae offer ...................here */
+.place-offer{
+    margin-top: 30px;
+
+}
 /* sticky styling for reservre......................here */
 .price-detail {
     width: 400px;
-    height: 100vh;
+    height: 75vh;
     position: sticky;
+    top: 100px;
     right: 20px;
-    top: 50px;
-    height: 400px;
-    
-    margin-top: 50px;
     justify-items: flex-end;
     justify-content: right;
     margin-left: 70px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    
+
+}
+.price{
+    margin: 20px;
+    opacity: 0.8;
 
 }
 
@@ -62,6 +75,10 @@
     border-radius: 10%;
     margin-left: 10px;
 
+}
+.date{
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 /* adding guest............................here */
@@ -126,4 +143,37 @@
     padding-top: 5px;
     padding-bottom: 5px;
 
+}
+.hotelpreiceTotal{
+    margin-top: 20px;
+    margin-left: 20px;
+
+}
+
+/* rating div............................here */
+.reviwer{
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    width: 100%;
+    -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none; 
+}
+.reviwer::-webkit-scrollbar {
+    display: none;
+  }
+.user{
+    border: solid 1px rgb(246, 244, 244);
+
+
+    background: #fff;
+    min-width: 24em;
+    height: 300px;
+    border-radius: 0.6em;
+    margin: 1em;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25),
+        0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
+    transition: all ease 200ms;
 }
