--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,33 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <link rel="stylesheet" href="/style/register.css" type="text/css">
 </head>
 <body>
-    <div>
+    <div class="register-container">
         <h1>Sign Up</h1>
         <form method="POST" action="/register">
-            <label for="name"> First Name</label>
+            <label for="name"> First Name</label><br>
             <input type="text" placeholder="firstName" name="firstName">
             <br>
             <br>
-            <label for="lastName">Last Name</label>
+            <label for="lastName">Last Name</label><br>
             <input type="text" placeholder="lastName" name="lastName">
             <br>
             <br>
-            <label for="email">Email</label>
+            <label for="email">Email</label><br>
             <input type="email" placeholder="Email" name="email">
             <br>
             <br>
             
-            <label for="password">Password</label>
+            <label for="password">Password</label><br>
             <input type="password" placeholder="password" name="password">
             <br>
             <br>
-            <label for="Confirmpassword" class="form-label">Confirm password</label>
-             <input type="password" class="form-control" name="confirmpassword" id="confirmpassword" aria-describedby="emailHelp" placeholder="Confirm password">
+            <label for="Confirmpassword" class="form-label">Confirm password</label><br>
+             <input type="password" class="form-control" name="confirmpassword" id="confirmpassword" aria-describedby="emailHelp" placeholder="Confirm password"><br><br>
             <input type="submit" value="Sing In">
+            
 
         </form>
+        <a href="/login"><Button>Login</Button></a>
     </div>
 </body>
 </html>
