--- a/views/home.ejs
+++ b/views/home.ejs
@@ -32,7 +32,7 @@
 
 
 
-                     <img src="./img/amazingView/<%=x.hotelImg[0].filename%>">
+                     <img src="./img/amazingView/<%=x.hotelImg[0]?.filename%>">
 
 
                      <div class="details-hotel">
