--- a/views/partials/ticket.ejs
+++ b/views/partials/ticket.ejs
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="/style/ticket.css">
+
 </head>
 
 <body>
@@ -70,6 +72,7 @@
       </a>
     </div>
   </div>
+  <script src="/js/ticket.js"></script>
 </body>
 
 </html>
