--- a/public/style/home.css
+++ b/public/style/home.css
@@ -32,9 +32,33 @@
     color: black;
 
 }
-.ticket a:active{
+/* .ticket a:active{
     border-bottom: 1px solid red;
-}
+} */
+.ticket:hover a:not(:hover) a {
+    opacity: 0.2;
+  }
+  
+  .ticket a::after {
+    position: absolute;
+    content: "";
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: #3498db;
+    transform: scaleX(0);
+    transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+  }
+  .tcket a:hover::after, .ticket a.active::after {
+    transform: scaleX(1);
+  }
+  .ticket a {
+    position: relative;
+    font-family: Lato, sans-serif;
+    text-decoration: none;
+    transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+  }
 /* home page */
 .hotels{
     display: grid;
