--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -15,13 +15,10 @@
             </div>
             <div class="mid">
                 <div class="mid-section">
-                    <div class="mid-1 first "><p>Anywhere</p></div>
-                    <div class="mid-1  second ">
-                        <p>Any week</p>
-                    </div>
+                   
                     <div class="mid-1 third ">
-                        <spam >Add guest</spam>
-                      <span class="spam-bar">  <i class="fa-solid fa-magnifying-glass search" ></i></span>
+                       <input  type="text" placeholder="where you want to stay"/>
+                      <button class="spam-bar">  <i class="fa-solid fa-magnifying-glass search" ></i></button>
                     </div>
                 </div>
                 <!-- <div class="afterChange">
@@ -51,19 +48,19 @@
          <div>
             <% if(user){%>
                 <% console.log(user.firstName)%>
-            <%}%>
-            
-            <div>
-                <a href="register">Register</a>
-            </div>
-            <div>
-                <a href="login">Login</a>
-            </div>
-           
-            <div>
-                <a href="#">Logout</a>
-            </div>
-           
+                <div>
+                    <a href="#">Logout</a>
+                </div>
+            <%}else{%>
+                <div>
+                    <a href="register">Register</a>
+                </div>
+                <div>
+                    <a href="login">Login</a>
+                </div>
+
+           <%}%>
+ 
          </div>
     </modal>
     <script>
