--- a/views/partials/ticket.ejs
+++ b/views/partials/ticket.ejs
@@ -18,7 +18,7 @@
       </a>
     </div>
     <div class="ticket">
-      <a href="#">
+      <a href="/cabin">
         <img src="/img/cabin.jpg">
         <figcaption>Cabin</figcaption>
       </a>
